--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This repo has a new folder for each logic block we partake in, it's named after the day it was due.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Poonam-raj/logic-blocks#readme",
   "dependencies": {
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "jest": "^27.5.1"
   }
 }
